# crazyflie-link-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yaml
crazyflie-link/: Cargo.toml  README.md
crazyflie-link/examples/: bandwidth.rs  benchmark.rs  benchmark_multi.rs  bootloader.rs  console.rs  disconnect.rs  scan.rs
crazyflie-link/src/: capture.rs  connection.rs  context.rs  crazyflie_usb_connection.rs  crazyradio_connection.rs  error.rs  lib.rs  packet.rs  radio_thread.rs
examples/: console.rs
python-binding/: Cargo.toml  pyproject.toml
python-binding/examples/: console.py
python-binding/src/: lib.rs
src/: connection.rs  radio_thread.rs
