[package]
name = "crazyflie-link"
version = "0.2.2"
authors = ["Arnaud Taffanel <arnaud@bitcraze.io>"]
edition = "2018"
description = "Crazyflie link"
readme = "README.md"
repository = "https://github.com/bitcraze/crazyflie-link-rs"
license = "MIT OR Apache-2.0"
keywords = ["nrf24", "crazyflie", "webusb", "wasm"]
categories = ["hardware-support"]
exclude = [
    ".github/*"
]


[dependencies]
bitflags = "1.0"
crazyradio = { version="0.3.0", features = ["shared_radio", "async"]}
flume = "0.10"
log = "0.4"
rand = "0.8"
thiserror = "1"
url = "2.2"
hex = "0.4.3"
tokio = { version = "1.36.0", features = ["full"]}
futures = "0.3"
futures-util = "0.3"
futures-channel = "0.3"
rusb = "0.9.4"

[dev-dependencies]
anyhow = "1"
byteorder = "1.2.2"
structopt = "0.3"
