[package]
name = "crazyflie-link"
version = "0.4.0"
authors = ["Arnaud Taffanel <arnaud@bitcraze.io>", "Marcus Eliasson <marcus@bitcraze.io>"]
edition = "2021"
description = "Crazyflie link"
readme = "README.md"
repository = "https://github.com/bitcraze/crazyflie-link-rs"
license = "MIT OR Apache-2.0"
keywords = ["crazyflie",]
categories = ["hardware-support"]
exclude = [
    ".github/*"
]


[dependencies]
bitflags = "2.6.0"
crazyradio = { version="0.4.0", features = ["shared_radio", "async"]}
flume = "0.12.0"
log = "0.4"
rand = "0.9"
thiserror = "2"
url = "2.2"
hex = "0.4.3"
tokio = { version = "1.36.0", features = ["full"]}
futures = "0.3"
futures-util = "0.3"
futures-channel = "0.3"
rusb = "0.9.4"
async-trait = "0.1.83"

[features]
default = []
packet_capture = ["crazyradio/packet_capture"]

[dev-dependencies]
anyhow = "1"
byteorder = "1.2.2"
indicatif = { version = "0.18.3", features = ["tokio"] }
structopt = "0.3"
