[package]
name = "cflinkrs"
version = "0.1.0"
authors = ["Arnaud Taffanel <arnaud@bitcraze.io>"]
edition = "2018"

[lib]
name = "cflinkrs"
crate-type = ["cdylib"]

[dependencies]
crazyflie-link = { path = "../crazyflie-link" }
async-std = "1.9"
async_executors = { version = "0.4.1", features = ["async_std"] }

[dependencies.pyo3]
version = "0.15.0"
features = ["extension-module"]