[package]
name = "cflinkrs"
version = "0.1.0"
authors = ["Arnaud Taffanel <arnaud@bitcraze.io>"]
edition = "2018"

[lib]
name = "cflinkrs"
crate-type = ["cdylib"]

[dependencies]
crazyflie-link = { path = "../crazyflie-link" }
tokio = { version = "1.36.0", features = ["full"] }

[dependencies.pyo3]
version = "0.21.2"
features = ["extension-module", "macros"]