[package]
name = "cflinkrs"
version = "0.1.0"
authors = ["Arnaud Taffanel <arnaud@bitcraze.io>"]
edition = "2021"

[lib]
name = "cflinkrs"
crate-type = ["cdylib"]

[dependencies]
crazyflie-link = { path = "../crazyflie-link" }
lazy_static = "1.5.0"
tokio = { version = "1.48.0", features = ["full"] }

[dependencies.pyo3]
version = "0.27.1"
features = ["extension-module", "macros"]
